compiler/tools/fpp-check/test/spec_loc/abs_type_dictionary_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/abs_type_dictionary_error.fpp:1.1
locate dictionary type T at "abs_type_dictionary_error.fpp"
^
error: incorrect location specifier
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/abs_type_dictionary_error.fpp:2.1
type T
^
note: one specifies dictionary and one does not
